# Test-Project

./: .env  db.sqlite3  pyproject.toml  requirements.txt
templates/: base.html
templates/email/: password_reset.html  welcome_email.html
test_project/: settings.py  storage_backends.py  urls.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_user_type.py  0003_product.py
utils/: backends.py  constants.py  permissions.py  utility.py
